add ncurses-terminfo to fix build
Signed-off-by: Weston Steimel <weston.steimel@gmail.com>

--- a/master/Dockerfile
+++ b/master/Dockerfile
@@ -7,6 +7,7 @@ ENV CMATRIX_VERSION "${CMATRIX_VERSION}"
 
 RUN apk upgrade && apk add --no-cache \
     ncurses-dev \
+    ncurses-terminfo \
     git \
     build-base \
     autoconf \
